--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!--Area containing the restart game button and score container-->
     <div id = "gameRow">
       <!--Button allowing the user to restart the game to a new initial condition-->
-      <div class = "gameItem" id = "gameButton" onclick = restartGame()>Start New Game</div>
+      <div class = "gameItem" id = "gameButton" onclick = restartGame()>Restart Game</div>
       <!--Container to keep track of the user's current score-->
       <p class = "gameItem" id = "scoreContainer">Current Score: 0</p>
     </div>
@@ -52,7 +52,7 @@
     <button class = "rpButton" id = "parameterMenuButton" onclick = showParameters()>Open Parameter Options</button>
     <!--Explanation of the default parameters-->
     <!--Content is modified in the JS document to reflect the current parameters when a new set of parameters is saved-->
-    <p class = "rpText" id = "defaultParameters">The 6 Game can be modified to create a custom playing experience and difficulty level by changing certain parameters. The current parameters are: Winning Tile = 6, Board Size = 4 x 4, Spawning a New Tile = 0.3, New Tile Being Value 2 = 0.15. Horizontal and vertical moves are enabled. Diagonal moves are enabled.</p>
+    <p class = "rpText" id = "defaultParameters">The 6 Game can be modified to create a custom playing experience and difficulty level by changing certain parameters. The current parameters are: Winning Tile = 6, Board Size = 4 x 4, Spawning a New Tile = 0.3, New Tile Being Value 2 = 0.15. Vertical and horizontal moves are enabled. Diagonal moves are enabled.</p>
     <!--Area containing the explanations of the winning tile, row size, column size, tile probability, and two probability parameters, and corresponding range sliders to modify their values-->
     <!--Content is modified in the JS document to reflect the current parameters when a new set of parameters is saved-->
     <div id = "sliderContainer">
@@ -60,7 +60,7 @@
       <div class = "sliderColumn">
         <p class = "rpText2 hidden">Winning Tile Value</p>
         <!--Range slider allowing user input for the winning tile parameter-->
-        <input type = "range" min = "2" max = "10" step = "1" value = "6" oninput="winValue.innerText = this.value" class = "parameterSlider hidden" id = "winSlider">
+        <input type = "range" min = "2" max = "10" step = "1" value = "6" oninput = "winValue.innerText = this.value" class = "parameterSlider hidden" id = "winSlider">
         <!--Currently selected value of the range slider for the winning tile parameter-->
         <p class = "sliderValue hidden" id = "winValue">6</p>
         <!--Explanation of the winning tile parameter-->
@@ -70,7 +70,7 @@
       <div class = "sliderColumn">
         <p class = "rpText2 hidden">Number of Rows</p>
         <!--Range slider allowing user input for the row size parameter-->
-        <input type = "range" min = "3" max = "8" step = "1" value = "4" oninput="rowValue.innerText = this.value" class = "parameterSlider hidden" id = "rowSlider">
+        <input type = "range" min = "3" max = "8" step = "1" value = "4" oninput = "rowValue.innerText = this.value" class = "parameterSlider hidden" id = "rowSlider">
         <!--Currently selected value of the range slider for the row size parameter-->
         <p class = "sliderValue hidden" id = "rowValue">4</p>
         <!--Explanation of the row size parameter-->
@@ -80,7 +80,7 @@
       <div class = "sliderColumn">
         <p class = "rpText2 hidden">Number of Columns</p>
         <!--Range slider allowing user input for the column size parameter-->
-        <input type="range" min = "3" max = "8" step = "1" value = "4" oninput="colValue.innerText = this.value" class = "parameterSlider hidden" id = "colSlider">
+        <input type="range" min = "3" max = "8" step = "1" value = "4" oninput = "colValue.innerText = this.value" class = "parameterSlider hidden" id = "colSlider">
         <!--Currently selected value of the range slider for the column size parameter-->
         <p class = "sliderValue hidden" id = "colValue">4</p>
         <!--Explanation of the column size parameter-->
@@ -90,7 +90,7 @@
       <div class = "sliderColumn">
         <p class = "rpText2 hidden">Probability of Tile</p>
         <!--Range slider allowing user input for the tile probability parameter-->
-        <input type = "range" min = "0" max = "1" step = "0.01" value = "0.3" oninput="tileValue.innerText = this.value" class = "parameterSlider hidden" id = "tileSlider">
+        <input type = "range" min = "0" max = "1" step = "0.01" value = "0.3" oninput = "tileValue.innerText = this.value" class = "parameterSlider hidden" id = "tileSlider">
         <!--Currently selected value of the range slider for the tile probability parameter-->
         <p class = "sliderValue hidden" id = "tileValue">0.3</p>
         <!--Explanation of the tile probability parameter-->
@@ -100,7 +100,7 @@
       <div class = "sliderColumn">
         <p class = "rpText2 hidden">Probability of Two</p>
         <!--Range slider allowing user input for the two probability parameter-->
-        <input type = "range" min = "0" max = "1" step = "0.01" value = "0.1" oninput="twoValue.innerText = this.value" class = "parameterSlider hidden" id = "twoSlider">
+        <input type = "range" min = "0" max = "1" step = "0.01" value = "0.1" oninput = "twoValue.innerText = this.value" class = "parameterSlider hidden" id = "twoSlider">
         <!--Currently selected value of the range slider for the two probability parameter-->
         <p class = "sliderValue hidden" id = "twoValue">0.15</p>
         <!--Explanation of the two probability parameter-->
@@ -115,7 +115,7 @@
         <p class = "rpText2 hidden">Vertical and Horizontal Moves</p>
         <!--Checkbox allowing user input for the vertical/horizontal moves parameter-->
         <label class="checkboxContainer">
-          <input type = "checkbox" checked = "checked" class = "rpCheckbox" id = "hvMoves">
+          <input type = "checkbox" checked = "checked" class = "rpCheckbox" id = "vhCheckbox">
           <span class="checkmark hidden"></span>
         </label>
         <!--Extra space around the checkbox added for formatting purposes-->
@@ -128,7 +128,7 @@
         <p class = "rpText2 hidden">Diagonal Moves</p>
         <!--Checkbox allowing user input for the diagonal moves parameter-->
         <label class="checkboxContainer">
-          <input type = "checkbox" checked = "checked" class = "rpCheckbox" id = "dMoves">
+          <input type = "checkbox" checked = "checked" class = "rpCheckbox" id = "dCheckbox">
           <span class="checkmark hidden"></span>
         </label>
         <!--Extra space around the checkbox added for formatting purposes-->
